--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <p>Fecha: <strong>28 de septiembre de 2024</strong></p>
         <p>Ubicación: <strong>Bahía Blanca, Buenos Aires, Argentina</strong></p>
         <div id="countdown"></div>
-        <a href="https://www.google.com/maps?q=Bahía+Blanca,+Buenos+Aires,+Argentina" target="_blank">Ver Ubicación en Google Maps</a>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35113.21594695551!2d-62.28737399569005!3d-38.70706101721517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95edbcabdc1302bd%3A0x76d1d88d241e7a11!2sBah%C3%ADa%20Blanca%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1724892741725!5m2!1ses-419!2sar" width="800" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <a href="https://maps.app.goo.gl/F78MbrLSajnSALKZ6" target="_blank">Ver Ubicación en Google Maps</a>
     </div>
     <script src="script.js"></script>
 </body>
